force-app/main/default/objects/Sandstone_Readings__c/Sandstone_Readings__c.object-meta.xml
<CustomObject>
    <label>Sandstone Readings</label>
    <nameField>
        <label>Sandstone Readings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sandstone Readings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>