force-app/main/default/objects/Sandstone_Readings__c/fields/Antiscalant_Pump__c.field-meta.xml
<CustomField>
    <fullName>Antiscalant_Pump__c</fullName>
    <description>For EU Repair Form</description>
    <label>Antiscalant Pump</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>