force-app/main/default/objects/Sandstone_Readings__c/fields/Antiscalant_Tank_Level__c.field-meta.xml
<CustomField>
    <fullName>Antiscalant_Tank_Level__c</fullName>
    <description>For EU Repair Form</description>
    <label>Antiscalant Tank Level</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>