force-app/main/default/objects/Sandstone_Readings__c/fields/Blended_Product_pH__c.field-meta.xml
<CustomField>
    <fullName>Blended_Product_pH__c</fullName>
    <description>For EU Repair Form</description>
    <label>Blended Product pH</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>