force-app/main/default/objects/Sandstone_Readings__c/fields/Centre_Electrode_Rotameter__c.field-meta.xml
<CustomField>
    <fullName>Centre_Electrode_Rotameter__c</fullName>
    <description>For EU Repair Form</description>
    <label>Centre Electrode Rotameter</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>