force-app/main/default/objects/Sandstone_Readings__c/fields/Compressed_Air_Pressure_Gauge__c.field-meta.xml
<CustomField>
    <fullName>Compressed_Air_Pressure_Gauge__c</fullName>
    <description>For EU Repair Form</description>
    <label>Compressed Air Pressure Gauge</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>