force-app/main/default/objects/Sandstone_Readings__c/fields/Concentrate_Blowdown_Flowmeter__c.field-meta.xml
<CustomField>
    <fullName>Concentrate_Blowdown_Flowmeter__c</fullName>
    <description>For EU Repair Form</description>
    <label>Concentrate Blowdown Flowmeter</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>