force-app/main/default/objects/Sandstone_Readings__c/fields/Concentrate_In__c.field-meta.xml
<CustomField>
    <fullName>Concentrate_In__c</fullName>
    <description>For EU Repair Form</description>
    <label>Concentrate In</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>