force-app/main/default/objects/Sandstone_Readings__c/fields/Concentrate_Out_Brine_Blowdown__c.field-meta.xml
<CustomField>
    <fullName>Concentrate_Out_Brine_Blowdown__c</fullName>
    <description>For EU Repair Form</description>
    <label>Concentrate Out (Brine Blowdown)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>