force-app/main/default/objects/Sandstone_Readings__c/fields/Concentrate_Pressure_Pump_Discharge__c.field-meta.xml
<CustomField>
    <fullName>Concentrate_Pressure_Pump_Discharge__c</fullName>
    <description>For EU Repair Form</description>
    <label>Concentrate Pressure- Pump Discharge</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>