force-app/main/default/objects/Sandstone_Readings__c/fields/Concentrate_Pump_Discharge_Gauge__c.field-meta.xml
<CustomField>
    <fullName>Concentrate_Pump_Discharge_Gauge__c</fullName>
    <description>For EU Repair Form</description>
    <label>Concentrate Pump Discharge Gauge</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>