force-app/main/default/objects/Sandstone_Readings__c/fields/DC_Power_Set_Point_S1__c.field-meta.xml
<CustomField>
    <fullName>DC_Power_Set_Point_S1__c</fullName>
    <description>For EU Repair Form</description>
    <label>DC Power Set Point S1</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>