force-app/main/default/objects/Sandstone_Readings__c/fields/Dilute_In__c.field-meta.xml
<CustomField>
    <fullName>Dilute_In__c</fullName>
    <description>For EU Repair Form</description>
    <label>Dilute In</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>