force-app/main/default/objects/Sandstone_Readings__c/fields/Dilute_Or_Product_Conductivity__c.field-meta.xml
<CustomField>
    <fullName>Dilute_Or_Product_Conductivity__c</fullName>
    <description>For EU Repair Form</description>
    <label>Dilute Or Product Conductivity</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>