force-app/main/default/objects/Sandstone_Readings__c/fields/ECIP_Performed__c.field-meta.xml
<CustomField>
    <fullName>ECIP_Performed__c</fullName>
    <description>For EU Repair Form</description>
    <label>ECIP Performed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ECIP_Performed</valueSetName>
    </valueSet>
</CustomField>