force-app/main/default/objects/Sandstone_Readings__c/fields/EDR_Feed_Pressure_Pre_cartridge__c.field-meta.xml
<CustomField>
    <fullName>EDR_Feed_Pressure_Pre_cartridge__c</fullName>
    <description>For EU Repair Form</description>
    <label>EDR Feed Pressure- Pre cartridge</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>