force-app/main/default/objects/Sandstone_Readings__c/fields/Feed_Chlorine_Online__c.field-meta.xml
<CustomField>
    <fullName>Feed_Chlorine_Online__c</fullName>
    <description>For EU Repair Form</description>
    <label>Feed Chlorine Online</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>