force-app/main/default/objects/Sandstone_Readings__c/fields/Feed_Conductivity_In_Situ__c.field-meta.xml
<CustomField>
    <fullName>Feed_Conductivity_In_Situ__c</fullName>
    <description>For EU Repair Form</description>
    <label>Feed Conductivity In Situ</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>