force-app/main/default/objects/Sandstone_Readings__c/fields/Feed_Conductivity_Stack_Cuts__c.field-meta.xml
<CustomField>
    <fullName>Feed_Conductivity_Stack_Cuts__c</fullName>
    <description>For EU Repair Form</description>
    <label>Feed Conductivity Stack Cuts</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>