force-app/main/default/objects/Sandstone_Readings__c/fields/Feed_Pump_Speed__c.field-meta.xml
<CustomField>
    <fullName>Feed_Pump_Speed__c</fullName>
    <description>For EU Repair Form</description>
    <label>Feed Pump Speed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>