force-app/main/default/objects/Sandstone_Readings__c/fields/Feed_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Feed_Temperature__c</fullName>
    <description>For EU Repair Form</description>
    <label>Feed Temperature</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>