force-app/main/default/objects/Sandstone_Readings__c/fields/Feed_Turbidity__c.field-meta.xml
<CustomField>
    <fullName>Feed_Turbidity__c</fullName>
    <description>For EU Repair Form</description>
    <label>Feed Turbidity</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>