force-app/main/default/objects/Sandstone_Readings__c/fields/Hours_Run__c.field-meta.xml
<CustomField>
    <fullName>Hours_Run__c</fullName>
    <description>For EU Repair Form</description>
    <label>Hours Run</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>