force-app/main/default/objects/Sandstone_Readings__c/fields/Hydrochloric_Acid_Pumps__c.field-meta.xml
<CustomField>
    <fullName>Hydrochloric_Acid_Pumps__c</fullName>
    <description>For EU Repair Form</description>
    <label>Hydrochloric Acid Pumps</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>