force-app/main/default/objects/Sandstone_Readings__c/fields/Polarity__c.field-meta.xml
<CustomField>
    <fullName>Polarity__c</fullName>
    <description>For EU Repair Form</description>
    <label>Polarity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Polarity</valueSetName>
    </valueSet>
</CustomField>