force-app/main/default/objects/Sandstone_Readings__c/fields/Product_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Product_Pressure__c</fullName>
    <description>For EU Repair Form</description>
    <label>Product Pressure</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>