force-app/main/default/objects/Sandstone_Readings__c/fields/SDI__c.field-meta.xml
<CustomField>
    <fullName>SDI__c</fullName>
    <description>For EU Repair Form</description>
    <label>SDI</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>