force-app/main/default/objects/Sandstone_Readings__c/fields/Stack_1_Stage_1_x__c.field-meta.xml
<CustomField>
    <fullName>Stack_1_Stage_1_x__c</fullName>
    <description>For EU Repair Form</description>
    <label>Stack 1 Stage 1 x</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>