force-app/main/default/objects/Sandstone_Readings__c/fields/Stack_Inlet_DP_Transmitter__c.field-meta.xml
<CustomField>
    <fullName>Stack_Inlet_DP_Transmitter__c</fullName>
    <description>For EU Repair Form</description>
    <label>Stack Inlet DP Transmitter</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>