force-app/main/default/objects/Sandstone_Readings__c/fields/Stack_Inlet_Pressure_Post_cartridge__c.field-meta.xml
<CustomField>
    <fullName>Stack_Inlet_Pressure_Post_cartridge__c</fullName>
    <description>For EU Repair Form</description>
    <label>Stack Inlet Pressure- Post cartridge</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>