force-app/main/default/objects/Sandstone_Readings__c/fields/Stack_Outlet_DP_Transmitter__c.field-meta.xml
<CustomField>
    <fullName>Stack_Outlet_DP_Transmitter__c</fullName>
    <description>For EU Repair Form</description>
    <label>Stack Outlet DP Transmitter</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>