force-app/main/default/objects/Sandstone_Readings__c/fields/Stack_Probing__c.field-meta.xml
<CustomField>
    <fullName>Stack_Probing__c</fullName>
    <description>For EU Repair Form</description>
    <label>Stack Probing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Stack_Probing</valueSetName>
    </valueSet>
</CustomField>