force-app/main/default/objects/Sandstone_Readings__c/fields/Stack_Wash_Down__c.field-meta.xml
<CustomField>
    <fullName>Stack_Wash_Down__c</fullName>
    <description>For EU Repair Form</description>
    <label>Stack Wash Down</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Stack_Wash_Down</valueSetName>
    </valueSet>
</CustomField>