force-app/main/default/objects/Sandstone_Readings__c/fields/Top_Up_Antiscalant_Tank__c.field-meta.xml
<CustomField>
    <fullName>Top_Up_Antiscalant_Tank__c</fullName>
    <description>For EU Repair Form</description>
    <label>Top Up Antiscalant Tank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Top_Up_Antiscalant_Tank</valueSetName>
    </valueSet>
</CustomField>